# autotype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autotype.h
include/: autotype.hpp  autotype_type_info.hpp  bad_autotype_cast.hpp
include/autotype/: autotype.hpp  bad_autotype_cast.hpp
include/autotype/impl/: autotype_impl.hpp
include/impl/: autotype_impl.hpp
src/: CMakeLists.txt  autotype.cpp  autotype.h  autotype_type_info.cpp  bad_autotype_cast.cpp
test/: CMakeLists.txt  autotype_test.cpp  autotype_type_info_test.cpp  bad_autotype_cast_test.cpp
